--- a/syokuzai_tarou/refrigerator/templates/refrigerator/refrigerator.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/refrigerator.html
@@ -49,6 +49,7 @@
 <div class="wrapper">
    <main class="main">
     <a>トップページ</a><br>
+    <a>{{ user.username }}さんの冷蔵庫</a><br>
     <table>
         <tr>
         <thead>
