--- a/syokuzai_tarou/refrigerator/static/refrigerator/css/table.css
+++ b/syokuzai_tarou/refrigerator/static/refrigerator/css/table.css
@@ -33,6 +33,7 @@ a:active {
 }
 
 .wrapper {
+    height: 200%;
     width: 970px;
     margin: 30px auto 40px;
 }
@@ -43,6 +44,7 @@ a:active {
     margin: 0 auto;
     height: 500px;
     text-align: center;
+  
 }
 
 .footer {
@@ -116,6 +118,7 @@ a:active {
 /* spacing */
 
 table {
+    height: 200%;
     table-layout: fixed;
     width: 100%;
     border-collapse: collapse;
@@ -123,19 +126,19 @@ table {
   }
   
   thead th:nth-child(1) {
-    width: 30%;
+    width: 40%;
   }
   
   thead th:nth-child(2) {
-    width: 20%;
+    width: 30%;
   }
   
   thead th:nth-child(3) {
-    width: 15%;
+    width: 30%;
   }
   
-  thead th:nth-child(4) {
-    width: 35%;
+  /*thead th:nth-child(4) {
+    width: 0%;
   }
   /*
   th, td {
@@ -152,12 +155,15 @@ table {
   }
 
   thead, tfoot {
+    display: block;
     /*background: url(leopardskin.jpg);*/
     color: white;
     text-shadow: 1px 1px 1px black;
+
   }
   
   thead th, tfoot th, tfoot td {
+    width: 300px;
     /*background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.5));*/
     border-radius: 10px;/*角の丸み*/
     background:  #567947;
