--- a/syokuzai_tarou/refrigerator/templates/refrigerator/refrigerator.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/refrigerator.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/style.css' %}" />
     -->
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/table.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/scrollbar.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/hamburger.css' %}" />
     <title>{{ title }}</title>
 </head>
@@ -51,12 +52,15 @@
     <a>トップページ</a><br>
     <table>
         <tr>
-        <thead>
+            <thead>
         {% for h in header %}
               <th>{{h}}</th>  
         {% endfor %}
-        </thead>
+            </thead>
         </tr>
+    </table>
+        <div class="scrollArea">
+            <table>
         {% for item in foods %}
             <tr>
                 <!--
@@ -67,8 +71,10 @@
                 <td>{{ item.foodset.str_limitRegister }}</td>   
             </tr>
         {% endfor %}
+        
     </table>
-</main>
+        </div>
+   </main>
 </div>
 <footer class="footer">
      <p class="copyright">Copyright @ 2020 syokuzai_tarou</p>
