--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_change.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_change.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/hamburger.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/deco_btn.css' %}" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <title>{{title}}</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <div>
                     <div>
                         <ul>
-                            <hu>Hey！<font color="blue">{{ user.username }}</font></hu>
+                            <hu>Hey！<font color="#eb5a09">{{ user.username }}</font></hu>
                             <li><a href="{% url 'logout' %}">ログアウト</a></li>
                             <li><a href="{% url 'password_change' %}">パスワード変更</a></li>
                         </ul>
