--- a/syokuzai_tarou/accounts/templates/accounts/signup.html
+++ b/syokuzai_tarou/accounts/templates/accounts/signup.html
@@ -8,6 +8,7 @@
     <title>SIGN UP</title>
     <link rel="stylesheet" href="{% static 'refrigerator/css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
