--- a/syokuzai_tarou/refrigerator/static/refrigerator/css/scrollbar.css
+++ b/syokuzai_tarou/refrigerator/static/refrigerator/css/scrollbar.css
@@ -11,10 +11,13 @@
   /*スクロールバーの背景色・角丸指定*/
   .scrollArea.deco::-webkit-scrollbar-track {
     border-radius: 10px;
+    box-shadow: 0 0 4px rgb(146, 146, 146) inset;
     
   }
   /*スクロールバーの色・角丸指定*/
   .scrollArea.deco::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background:#09C9D9;
+    background:#567947;
+    
+    background: linear-gradient(0deg,#b5d8a7,#567947);
   }
