--- a/syokuzai_tarou/refrigerator/templates/refrigerator/recipe.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/recipe.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/hamburger.css' %}" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <title>{{ title }}</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
                 <div>
                     <div>
                         <ul>
-                            <hu>Hey！<font color="blue">{{ user.username }}</font></hu>
+                            <hu>Hey！<font color="#eb5a09">{{ user.username }}</font></hu>
                             <li><a href="{% url 'logout' %}">ログアウト</a></li>
                             <li><a href="{% url 'password_change' %}">パスワード変更</a></li>
                         </ul>
