--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
@@ -54,15 +54,13 @@
     <div class="wrapper">
     <main class="main">
         <h2>食材登録ページ</h2>
-        <table>
+        <table align="center">
             <form action="{% url 'food_register' %}" method="post">
-                {% csrf_token %}
-            
-                {{ form_foodset.as_table }}
-            
+                {% csrf_token %}        
+                <p align="center">{{ form_foodset.as_table }}</p>
                 <tr>
                     <td></td>
-                    <td><input class="decorated-btn" type="submit" value="登録"></td>
+                    <td align="center"><input class="decorated-btn" type="submit" value="登録"></td>
                 </tr>
             </form>
         </table>
