--- a/syokuzai_tarou/accounts/templates/accounts/password_change_done.html
+++ b/syokuzai_tarou/accounts/templates/accounts/password_change_done.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <title>パスワード変更完了</title>
     <link rel="stylesheet" href="{% static 'refrigerator/css/reset.css' %}" />
-    <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'refrigerator/css/table.css' %}" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
