--- a/syokuzai_tarou/accounts/templates/registration/login.html
+++ b/syokuzai_tarou/accounts/templates/registration/login.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>LOGIN</title>
     <link rel="stylesheet" href="{% static 'refrigerator/css/reset.css' %}" />
-    <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'refrigerator/css/table.css' %}" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
