--- a/syokuzai_tarou/refrigerator/templates/refrigerator/calender.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/calender.html
@@ -7,7 +7,7 @@
     <title>テストページ</title>
     <link rel="stylesheet" href="{% static 'refrigerator/css/reset.css' %}" />
     
-    <link rel="stylesheet" href="{% static 'refrigerator/css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'refrigerator/css/table.css' %}" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
