--- a/syokuzai_tarou/refrigerator/static/refrigerator/css/table.css
+++ b/syokuzai_tarou/refrigerator/static/refrigerator/css/table.css
@@ -38,12 +38,15 @@ a:active {
 }
 
 .main {
-    display: block;
-    width: 660px;
-    margin: 0 auto;
-    height: 500px;
-    text-align: center;
-  
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+  height: 500px;
+  text-align: center;
+  overflow-y: scroll;
+  overflow-x: hidden;
+    
+
 }
 
 .footer {
@@ -117,14 +120,44 @@ a:active {
 /* spacing */
 
 table {
-    height: 200%;
-    table-layout: fixed;
-    width: 100%;
-    border-collapse: collapse;
-    /*border: 3px solid rgb(153, 206, 188);*/
-  }
+  width: 800px;
+}
+th,
+td {
+  width: 200px;
+  height: 100px;
+  vertical-align: middle;
+  padding: 15px;
+  border: 1px solid #567947;
+  background-color: #b5d8a7;
+}
+.fixed01,
+.fixed02 {
+  top: 0;  
+  position: sticky;
+  color: #fff;
+  background: #567947;
+  border-radius: 10px;/*角の丸み*/
+}
+.fixed01:before,
+.fixed02:before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ccc;
+}
+.fixed01 {
+  left: 0;
+}
+.fixed02 {
+  left: 199px;
+}
+
   
-  thead th:nth-child(1) {
+  /*thead th:nth-child(1) {
     width: 30%;
   }
   
@@ -144,7 +177,7 @@ table {
     padding: 20px;
   }
 */
- th{
+ /*th{
     padding: 20px;
   }
   td{
@@ -155,12 +188,12 @@ table {
 
   thead, tfoot {
   
-    /*background: url(leopardskin.jpg);*/
+    background: url(leopardskin.jpg);
     color: white;
     text-shadow: 1px 1px 1px black;
 
   }
-  
+  */
   thead th, tfoot th, tfoot td {
     
     /*background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.5));*/
