--- a/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
+++ b/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
@@ -43,7 +43,7 @@
     <div class="wrapper">
        <main class="main">
         <a>レシピ表示ページ</a>
-        <form action="{% url 'recipe' %}" method="POST" >
+        <form action="{% url 'recipe' %}" method="post" >
             {%  csrf_token %}
             <tr>
                 <input type="hidden"  value="__foods_form__">
