ボタンcss適用_1213

--- a/syokuzai_tarou/accounts/templates/accounts/password_change.html
+++ b/syokuzai_tarou/accounts/templates/accounts/password_change.html
@@ -8,6 +8,7 @@
     <title>パスワード変更</title>
     <link rel="stylesheet" href="{% static 'refrigerator/css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/table.css' %}" />
+    <link rel="stylesheet" href="{% static 'refrigerator/css/deco_btn.css' %}" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -30,8 +31,8 @@
                 </br>
                 {% endfor %} {% csrf_token %}
 
-                <button type="submit" class="btn btn-primary btn-block">送信</button></br>
-                <button type="submit" class="btn btn-primary btn-block" onClick="javascript:history.go(-1);">戻る</button> {% endblock %}
+                <button class="decorated-btn" type="submit" class="btn btn-primary btn-block">送信</button></br><br>
+                <button class="decorated-btn" type="submit" class="btn btn-primary btn-block" onClick="javascript:history.go(-1);">戻る</button> {% endblock %}
             </form>
         </main>
     </div>
