--- a/syokuzai_tarou/accounts/templates/accounts/signup.html
+++ b/syokuzai_tarou/accounts/templates/accounts/signup.html
@@ -8,6 +8,7 @@
     <title>SIGN UP</title>
     <link rel="stylesheet" href="{% static 'refrigerator/css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/table.css' %}" />
+    <link rel="stylesheet" href="{% static 'refrigerator/css/deco_btn.css' %}" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -43,7 +44,7 @@
                                     <p style="margin:20px;">
                                         <p>パスワードを完全に数字のみにすることはできません。</p>
                                         <p style="margin:20px;">
-                                            <button type="submit">Sign up</button>
+                                            <button class="decorated-btn" type="submit">Sign up</button>
 
             </form>
 
