--- a/syokuzai_tarou/refrigerator/templates/refrigerator/calender.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/calender.html
@@ -4,68 +4,71 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/calender.css' %}" />
-   
+    <link rel="stylesheet" type="text/css" href="{% static 'refrigerator/css/sheet.css' %}" />
+
     <title>おなかすいた</title>
 </head>
 
 <body>
     <header class="header">
         <h1 class="logo">食材残さないよ太郎</h1>
-        
+
         <nav class="global-nav">
             <ul>
-               
+
             </ul>
         </nav>
 
-   
-</header>
-<div class="wrapper">
-   <main class="main">
-    <a>トップページ</a><br>
-    <table>
-        <tr>
-          <th class="fixed01">見出し</th>
-          <th class="fixed01">見出し</th>
-          <th class="fixed01">見出し</th>
-        </tr>
-        <tr>
-          <td>テキスト</td>
-          <td>テキスト</td>
-          <td>テキスト</td>
-        </tr>
-        <tr>
-          <td>テキスト</td>
-          <td>テキスト</td>
-          <td>テキスト</td>
-        </tr>
-        <tr>
-            <td>テキスト</td>
-            <td>テキスト</td>
-            <td>テキスト</td>
-          </tr>
-          <tr>
-            <td>テキスト</td>
-            <td>テキスト</td>
-            <td>テキスト</td>
-          </tr>
-          <tr>
-            <td>テキスト</td>
-            <td>テキスト</td>
-            <td>テキスト</td>
-          </tr>
-          <tr>
-            <td>テキスト</td>
-            <td>テキスト</td>
-            <td>テキスト</td>
-          </tr>
-      </table>
-   </main>
-</div>
-<footer class="footer">
-     <p class="copyright">Copyright @ 2020 syokuzai_tarou</p>
-</footer>
+
+    </header>
+    <div class="wrapper">
+        <main class="main">
+            <a>トップページ</a><br>
+            <table class="osare-table col5t">
+                <thead>
+                    <tr>
+                        <th>Goods1</th>
+                        <th>Goods2</th>
+                        <th>Goods3</th>
+                        <th>Goods4</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+
+                        <td>100</td>
+                        <td>90</td>
+                        <td>80</td>
+                        <td>70</td>
+                    </tr>
+                    <tr>
+
+                        <td>100</td>
+                        <td>90</td>
+                        <td>80</td>
+                        <td>70</td>
+                    </tr>
+                    <tr>
+
+                        <td>100</td>
+                        <td>90</td>
+                        <td>80</td>
+                        <td>70</td>
+                    </tr>
+                    <tr>
+
+                        <td>100</td>
+                        <td>90</td>
+                        <td>80</td>
+                        <td>70</td>
+                    </tr>
+                </tbody>
+            </table>
+        </main>
+    </div>
+    <footer class="footer">
+        <p class="copyright">Copyright @ 2020 syokuzai_tarou</p>
+    </footer>
 </body>
 
 </html>
