フォームの・削除_1213

--- a/syokuzai_tarou/refrigerator/static/refrigerator/css/table.css
+++ b/syokuzai_tarou/refrigerator/static/refrigerator/css/table.css
@@ -252,3 +252,10 @@ tfoot td {
     background: #567947;
     /*border: 3px solid #b5d8a7;*/
 }
+
+
+/*　フォームのリストマーク削除　*/
+
+ul {
+    list-style-type: none;
+}
