画面遷移時のボタンのデザインの修正_1213

--- a/syokuzai_tarou/refrigerator/static/refrigerator/css/deco_btn.css
+++ b/syokuzai_tarou/refrigerator/static/refrigerator/css/deco_btn.css
@@ -1,4 +1,5 @@
 .decorated-btn{
+    margin-top: 15px;
     width: 80px;
     height: 30px;
     line-height: 30px;
@@ -12,4 +13,11 @@
     border: 0px solid #567947;
     -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
     box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+}
+.decorated-btn a,
+.decorated-btn a:hover,
+.decorated-btn a:active{
+    display: inline-block;
+    color: #fff;
+    text-decoration: none;
 }
