削除ダイアログ_1215

--- a/syokuzai_tarou/accounts/templates/accounts/signup.html
+++ b/syokuzai_tarou/accounts/templates/accounts/signup.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header">
-        <h1 class="logo">食材残さないよ太郎</h1>
+        <h1><a href="{% url 'refrigerator' %}"><p class="logo" alt="食材残さないよ太郎"></a></h1>
         <nav class="global-nav">
             <ul>
                 <li class="nav-item active"><a href="{% url 'refrigerator' %}">ログイン</a></li>
