--- a/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
+++ b/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
@@ -55,13 +55,13 @@
                     </thead>
                 </tr>
                 <input type="hidden"  value="__foods_form__">
-                {% for field in foods_form %}
-                        {% for item in field %}
-                            <tr>
-                                <td>{{item}}</td>
-                            </tr>
-                        {% endfor %}
-                {% endfor %}
+                {% for item,data in foodlist %}
+                <tr>
+                    <td>{{item}}</td>
+                    <td>{{data.foodset.foodGram}}{{data.foodset.volume}}</td>
+                    <td>{{data.foodset.str_limitRegister}}</td>
+                </tr>
+            {% endfor %}
             </table>
             <input class="decorated-btn" type="submit" value="レシピ検索">
         </form>
