--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
@@ -52,12 +52,19 @@
             <form action="{% url 'food_change_select'   %}" method="post">
                 {% csrf_token %}
                 <table>
-                    {% for field in select_form %}
-                        {% for item in field %}
+                    <tr>
+                        <thead>
+                        {% for h in header %}
+                              <th>{{h}}</th>  
+                        {% endfor %}
+                        </thead>
+                    </tr>
+                    {% for item,data in foodlist %}
                             <tr>
                                 <td>{{item}}</td>
+                                <td>{{data.foodset.foodGram}}{{data.foodset.volume}}</td>
+                                <td>{{data.foodset.str_limitRegister}}</td>
                             </tr>
-                        {% endfor %}
                     {% endfor %}
                     
                     <input type="hidden"  value="__select_form__">
