コンフリクト修正_1215

--- a/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
+++ b/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
@@ -46,13 +46,23 @@
         <a>レシピ表示ページ</a>
         <form action="{% url 'recipe' %}" method="post" >
             {%  csrf_token %}
+            <table>
                 <tr>
+                    <thead>
+                    {% for h in header %}
+                          <th>{{h}}</th>  
+                    {% endfor %}
+                    </thead>
+                </tr>
                 <input type="hidden"  value="__foods_form__">
-                {% for field in foods_form %}
-                        {% for item in field %}
-                            <tr>
-                                <td>{{item}}</td>
-                            </tr>
+                {% for item,data in foodlist %}
+                <tr>
+                    <td>{{item}}</td>
+                    <td>{{data.foodset.foodGram}}{{data.foodset.volume}}</td>
+                    <td>{{data.foodset.str_limitRegister}}</td>
+                </tr>
+            {% endfor %}
+            </table>
             <input class="decorated-btn" type="submit" value="レシピ検索">
         </form>
     </main>
