--- a/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
+++ b/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
@@ -46,12 +46,13 @@
         <a>レシピ表示ページ</a>
         <form action="{% url 'recipe' %}" method="post" >
             {%  csrf_token %}
-            <table>
+            <div class="scroll-table">
+                <table class="osare-table col5t">  
                 <tr>
                     <thead>
-                    {% for h in header %}
-                          <th>{{h}}</th>  
-                    {% endfor %}
+                        {% for h in header %}
+                        <th class="fixed01">{{h}}</th>
+                        {% endfor %}
                     </thead>
                 </tr>
                 <input type="hidden"  value="__foods_form__">
@@ -63,6 +64,7 @@
                 </tr>
             {% endfor %}
             </table>
+            </div>
             <input class="decorated-btn" type="submit" value="レシピ検索">
         </form>
     </main>
