--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_change.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_change.html
@@ -45,12 +45,11 @@
    <main class="main">
     <a>食材登録変更ページ</a></br>
     
-    {{ foodset.food }}</br>
-    {{ foodset.str_limitRegister }}
+    <h2>食品名　：{{ foodset.food }} ({{ foodset.str_limitRegister }})</h2>
     <form action="{% url 'food_change'  id  %}" method="post">
         {% csrf_token %}
         <tr>
-            {{ form }}
+            <h2>数量　：{{foodset.foodGram}}ーー＞{{ form }}{{foodset.volume}}</h2></br>
         </tr>
         <input class="decorated-btn" type="submit" value="食材変更">
     </form>
