--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_search.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_search.html
@@ -48,7 +48,7 @@
         <a>食材検索ページ</a>
             <form action="{% url 'food_search' %}" method="post">
                 {% csrf_token %}
-                    <p align="left">{{msg}}</p>
+                    <h3 align="left">{{msg}}</h3>
                     <p align="left">{{form.search}}<th><input class="decorated-btn" type="submit" value="検索"></th></p>   
             </form>   
             <div class="scroll-table">
