食材の表のfoodGram表記変更_1215

--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
@@ -63,7 +63,7 @@
                     {% for item,data in foodlist %}
                             <tr>
                                 <td>{{item}}</td>
-                                <td>{{data.foodset.foodGram}}{{data.foodset.volume}}</td>
+                                <td>{{ data.foodset.foodGram }} [{{ data.foodset.volume }}]</td>
                                 <td>{{data.foodset.str_limitRegister}}</td>
                             </tr>
                     {% endfor %}
