ボタン修正_1215

--- a/syokuzai_tarou/accounts/templates/accounts/password_change_done.html
+++ b/syokuzai_tarou/accounts/templates/accounts/password_change_done.html
@@ -8,6 +8,7 @@
     <title>パスワード変更完了</title>
     <link rel="stylesheet" href="{% static 'refrigerator/css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/table.css' %}" />
+    <link rel="stylesheet" href="{% static 'refrigerator/css/deco_btn.css' %}" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -27,7 +28,7 @@
         <main class="main">
             <h1>パスワード変更完了</h1>
             <p>パスワードを変更しました。</p>
-            <button><a href="{% url 'home' %}">HOME</a></button>
+            <button class="decorated-btn" class="btn btn-primary btn-block"><a href="{% url 'refrigerator' %}">HOME</a></button>
         </main>
     </div>
     <footer class="footer">
